# ChatRobotLinux

./: .gitignore
testManager/: CMakeLists.txt  main.cpp  manager.cpp  manager.h  managerApi.cpp  testManager
testManager/common/: FileUtils.cpp  FileUtils.hpp
testPython/: test.py
testService/: CMakeLists.txt  main.cpp  testService  testService.cpp  testService.h
testService/common/: CommonVar.h  Log.cpp  Log.hpp
